Complete service integration and fixes: 15/15 services working
🎉 MAJOR ACHIEVEMENT: All Services Now Working (15/15)

✅ Caldera Integration Fixed:
- Moved Caldera from ~/caldera to ./caldera (main project folder)
- Added Caldera to docker-compose.yml with restart policies
- Updated install_caldera.sh to use docker-compose integration
- Caldera now properly managed and survives reboots

✅ Wazuh Complete Fix:
- Created comprehensive fix-wazuh-services.sh script
- Completely resolves SSL certificate mounting issues
- Implements proper certificate generation and permissions
- Sequential service startup with health checks
- All 3 Wazuh components now running (indexer, manager, dashboard)

🚀 Enhanced Prerequisites System:
- Added install-prerequisites.sh for modular prerequisites
- Enhanced cyberblue_init.sh with --install-prerequisites flag
- Implemented prerequisites validation before deployment
- Added comprehensive help system and error handling

📊 Service Status Achieved:
- Total running containers: 30+
- Portal shows: 15/15 services running
- All services have proper restart policies
- Complete auto-start functionality after reboots

🔧 Technical Improvements:
- Fixed SSL certificate directory/file mounting conflicts
- Added comprehensive Docker volume cleanup
- Implemented proper service startup sequencing
- Enhanced error handling and logging throughout
- Added health checks for critical services

📚 Documentation Updates:
- Updated README with 3 installation methods
- Enhanced scripts documentation
- Added troubleshooting guides
- Complete usage examples for all scenarios

🎯 User Experience:
- One-command installation option for new users
- Flexible manual installation for advanced users
- Comprehensive cleanup scripts for fresh starts
- All services reliably survive shutdowns and reboots

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -788,6 +788,26 @@ services:
     security_opt:
       - seccomp:unconfined
 
+  caldera:
+    build:
+      context: ./caldera
+      dockerfile: Dockerfile
+      args:
+        - VARIANT=full
+    container_name: caldera
+    hostname: caldera
+    ports:
+      - "7009:8888"
+    volumes:
+      - ./caldera/conf/local.yml:/usr/src/app/conf/local.yml
+      - ./caldera/data:/usr/src/app/data
+      - ./caldera/logs:/usr/src/app/logs
+    networks:
+      - cyber-blue
+    restart: unless-stopped
+    environment:
+      - PYTHONUNBUFFERED=1
+
 volumes:
   wazuh_api_configuration:
   wazuh_etc:
