--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -799,7 +799,7 @@ services:
     ports:
       - "7009:8888"
     volumes:
-      - ./caldera/conf/local.yml:/usr/src/app/conf/local.yml
+      - ./caldera/conf/local.yml:/usr/src/app/conf/local.yml:ro
       - ./caldera/data:/usr/src/app/data
       - ./caldera/logs:/usr/src/app/logs
     networks:
@@ -807,6 +807,7 @@ services:
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
+    working_dir: /usr/src/app
 
 volumes:
   wazuh_api_configuration:
