Fix EVEbox configuration - correct volume mapping
- Fixed EVEbox volume mapping from file to directory mount
- Changed from './suricata/logs/eve.json:/var/log/suricata/eve.json:ro'
  to './suricata/logs:/var/log/suricata:ro'
- Removed eve.json directory that was blocking file creation
- EVEbox now properly reads Suricata EVE JSON logs
- Resolves 'Is a directory' error preventing log visualization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,7 +101,7 @@ services:
     ports:
       - "7015:5636"
     volumes:
-      - ./suricata/logs/eve.json:/var/log/suricata/eve.json:ro
+      - ./suricata/logs:/var/log/suricata:ro
     restart: always
     networks:
       - cyber-blue
